# hyperloop-UW

./: P40Contactor.kicad_sym  README.md  hyperloop.code-workspace  platformio.ini  server.py
KICAD_DEMO/demo/: demo.kicad_pcb  demo.kicad_pro  demo.kicad_sch
comms/: config.cpp  main.cpp
hyperloop_gui/: server.js
hyperloop_gui/app/: notes.txt  page.js
hyperloop_gui/app/components/: BentoniteOnOff.js  CircularMeter.js  FlowMeter.js  GasSensor.js  Indicator.js  MachineOnOff copy.js  MachineOnOff.js  MotorTemp.js  PumpTemp.js  notes.txt
hyperloop_gui/app/motors/: page.js
include/: comms.h  config.h  estop.h  jsonSerial.h  recv.h  sensors.h  states.h  tbm.h
src/: comms.cpp  config.cpp  eStop.cpp  jsonSerialization.cpp  main.cpp  recv.cpp  send.cpp  sensors.cpp  state.cpp
src/tbm1/: jsonSerialization.cpp  jsonSerialization.ino  sensors.ino  state.cpp  tbm1.ino
storage_server/: pyproject.toml  server_config.json  storageserver.py
tbm0/: tbm0.ino
tbm1/: eStop.ino  jsonSerialization.ino  receiving_ESP.h  receiving_ESP_comms.ino  sending_ESP_comms.ino  sensors.ino  state.ino  tbm.h  tbm1.ino
tbm1/headers/: tbm.h
tbm1/src/: state.ino  tbm1.ino
tbm1_server/: server.py
